--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,66 @@
+
+*{
+  box-sizing: border-box;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0px;
+  background-color: #46529d;
+  color: #fff;  
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container {
+  width: 60%;
+  margin: 10% auto;
+}
+.container h2 {
+  text-align: center;
+}
+.container .text-title span{
+  font-size: 12px;
+  font-weight: normal;
+}
+.list-items {
+  background-color: #fff;
+  color: #46529d;
+}
+.list-items p {
+  color: #46529d;
+  margin: 0;
+  padding: 10px 0;
+  text-align: center;
+  font-size: 24px;
+}
+.list-items span {
+  display: inline-block;
+  text-align: center;
+  padding: 10px 0;
+  font-size: 20px;
+  border: .3px solid #ccc;
+}
+.list-items .title {
+  color: #fff;
+  background-color: #2ebaee;
+}
+.list-items span.name, 
+form input[type="text"] {
+  width: 60%;
+}
+.list-items span.age,
+form input[type="number"] {
+  width: 30%;
+}
+.list-items span.action,
+form input[type="submit"] {
+  width: 10%;
+}
+.list-items span.icon {
+  color: #2ebaee;
+  cursor: pointer;
+  width: 10%;
+}
+form input {
+  padding: 10px;
+  background-color: #ebebeb;
+  /* border: transparent; */
+  border: 1px solid #ccc;
 }
